eerste edit van Iben

--- a/_posts/2018-03-07-first.md
+++ b/_posts/2018-03-07-first.md
@@ -1,12 +1,16 @@
 ---
 layout: post
-title: "My first project"
+title: "Bugs Project: Kato Kato"
 author: Iben
 date: 2018-02-07
-categories: performance
+categories: artist homework book
 tags: tag1 tag2
 ---
 *Kasasagi:* Translated from Japanese means magpie. It is used figuratively to refer to a person who <b>obsessively</b> collects things
 
+This is a paragraph for my art homework used to describe the work of Kate Kato, who makes art out of recycled paper
+
 'Edible and Poisonous Fungi' (October 2017)
 Kate Kato used (all recycled) book pages, brown bags, wire, recycled fabric and wood to make these delicate life size fungi in a frame (46cm by 46cm). The content is as realistic as possible, even though it is made from paper and fabric. Kate displayed the art at a Kew Gardens event “Handmade at Kew”. Her intention was to show the audience how many different fungi you can actually find in Kew. The process of this artwork started with paper rolled into cylinders to create a stem. The gills are hand carved from book paper and then attached. Their caps are stitched together, then painted or embroidered. The leaves have hand stitched veins which makes them look very realistic. The atmosphere is bright and also a bit mysterious because the mushrooms look pretty and colourful but they could be poisonous. In conclusion I like this artwork because it looks real at first glance but when you look closer you can see the typed letters on the paper. I also like it because the lines and shapes make the fungi very lifelike. It encouraged me to try it myself so I made a butterfly inspired by one of her other artworks. 
+
+<img src="/img/fungi.jpg">
